# Desafio_2_informatica_2

./: .gitignore  Album.cpp  Artista.cpp  Artistas.cpp  Artistas.h  CMakeLists.txt  Cancion.cpp  Cancion.h  Credito.cpp  Credito.h  Publicidad.h  README.md  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h  album.h  artista.h  cancion.h  credito.cpp  credito.h  main.cpp  menu.cpp  menu.h  publicidad.h  sistema.h  usuario.h
Clases/: Artista.cpp  Artista.h  Cancion.cpp  Cancion.h  Credito.cpp  Credito.h  Creditos.cpp  Creditos.h  Publicidad.h  Usuarios.cpp  Usuarios.h  album.cpp  album.h  publicidad.cpp
Interfaz/: menu.cpp  menu.h
Sistema/: GestionarCanciones.cpp  GestionarCanciones.h  GestionarPublicidad.cpp  GestionarPublicidad.h  GestionarUsuarios.cpp  GestionarUsuarios.h  Sistema.cpp  Sistema.h  auxiliares.cpp  auxiliares.h
database/: albumes.txt  artistas.txt  canciones.txt  publicidad.txt  usuarios.txt
